--- a/05_quarto.qmd
+++ b/05_quarto.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Getting Started with Quarto"
 date: '2024-06-21'
+engine: knitr
 ---
 
 ## What is Quarto? {.smaller}
@@ -13,8 +14,7 @@ These documents **can be converted to multiple static and dynamic output formats
 
 The benefit of a well-prepared Quarto document is **full reproducibility**.
 
-[![Artwork by [@allison_horst](https://twitter.com/allison_horst)](https://raw.githubusercontent.com/allisonhorst/stats-illustrations/master/rstats-artwork/reproducibility_court.png)](https://github.com/allisonhorst/stats-illustrations){height=250 fig-alt="A judge’s desk labeled 'Reproducibility' with a witness stand right next to it. On the witness stand is a smiling and confident R Markdown document pointing at some lines of code on itself. A fuzzy monster lawyer in a polka-dot tie stands proudly saying 'Nothing further!' The judge (also a cute fuzzy monster) is smiling with their hands raised in celebration of reproducible work."}
-
+![Artwork by [@allison_horst](https://twitter.com/allison_horst)](https://cdn.myportfolio.com/45214904-6a61-4e23-98d6-b140f8654a40/c2ef45f1-4a68-4c7a-a43f-bdcf0f90e104_rw_1920.png?h=89c4f4138772e8b374e21a814cc91b2f){fig-alt="A schematic representing the multi-language input (e.g. Python, R, Observable, Julia) and multi-format output (e.g. PDF, html, Word documents, and more) versatility of Quarto."}
 
 ## Why Quarto?
 
@@ -24,15 +24,12 @@ Full reproducibility also means
 - no need to change all occurrences in a document
 - easily fix mistakes made during analysis...
 
-. . .
-
-![*GIPHY*](https://media.giphy.com/media/BxWTWalKTUAdq/giphy.gif)
-
+![Artwork by [@allison_horst](https://twitter.com/allison_horst)](https://raw.githubusercontent.com/allisonhorst/stats-illustrations/master/rstats-artwork/reproducibility_court.png){width="280" fig-alt="A judge’s desk labeled 'Reproducibility' with a witness stand right next to it. On the witness stand is a smiling and confident R Markdown document pointing at some lines of code on itself. A fuzzy monster lawyer in a polka-dot tie stands proudly saying 'Nothing further!' The judge (also a cute fuzzy monster) is smiling with their hands raised in celebration of reproducible work."}
 
 ## Quarto Exercises {.center .inverse}
 
 
-## Exercise 1 {.inverse}
+## Exercise 1 {.inverse .smaller}
 
 ⏰ **4 mins**
 
@@ -45,7 +42,9 @@ What is the difference between this and `include: false`?
 
 `r countdown::countdown(minutes = 4, color_running_background  = "lightgreen", color_running_text = "black", color_finished_background = "red", color_finished_text =  "grey30")`
 
-## Exercise 1: Solution {.inverse}
+. . .
+
+### Solution {.inverse}
 
 Create a chunk with `eval: false, echo: false`
 
