--- a/05_quarto.qmd
+++ b/05_quarto.qmd
@@ -16,6 +16,7 @@ The benefit of a well-prepared Quarto document is **full reproducibility**.
 
 ![Artwork by [@allison_horst](https://twitter.com/allison_horst)](https://cdn.myportfolio.com/45214904-6a61-4e23-98d6-b140f8654a40/c2ef45f1-4a68-4c7a-a43f-bdcf0f90e104_rw_1920.png?h=89c4f4138772e8b374e21a814cc91b2f){fig-alt="A schematic representing the multi-language input (e.g. Python, R, Observable, Julia) and multi-format output (e.g. PDF, html, Word documents, and more) versatility of Quarto."}
 
+
 ## Why Quarto?
 
 Full reproducibility also means
@@ -26,7 +27,8 @@ Full reproducibility also means
 
 ![Artwork by [@allison_horst](https://twitter.com/allison_horst)](https://raw.githubusercontent.com/allisonhorst/stats-illustrations/master/rstats-artwork/reproducibility_court.png){width="280" fig-alt="A judge’s desk labeled 'Reproducibility' with a witness stand right next to it. On the witness stand is a smiling and confident R Markdown document pointing at some lines of code on itself. A fuzzy monster lawyer in a polka-dot tie stands proudly saying 'Nothing further!' The judge (also a cute fuzzy monster) is smiling with their hands raised in celebration of reproducible work."}
 
-## Quarto Exercises {.center .inverse}
+
+# Quarto Exercises {.center .inverse}
 
 
 ## Exercise 1 {.inverse .smaller}
@@ -57,4 +59,3 @@ rendered document...
 ...whereas `include: false` will run the code and store the output for later use.
 
 See a comprehensive list of chunk options [here](https://quarto.org/docs/reference/formats/html.html#execution)
-
