--- a/01_intro-r.qmd
+++ b/01_intro-r.qmd
@@ -107,11 +107,40 @@ percent_items %>%
           legend.position = "none")
 ```
 
----
+##
 
 Things to look forward to:
 
-![Artwork by [@allison_horst](https://twitter.com/allison_horst)](img/rmarkdown_wizards.png)
+![Artwork by [@allison_horst](https://twitter.com/allison_horst)](https://cdn.myportfolio.com/45214904-6a61-4e23-98d6-b140f8654a40/c2ef45f1-4a68-4c7a-a43f-bdcf0f90e104_rw_3840.png?h=783eba914284e5adfb9feadcf4ba5f1e)
+
+
+## Naming conventions
+
+Characters, numbers, underscore (`_`), and dot (`.`) allowed
+
+- **BUT** names cannot start with a number
+
+. . .
+
+Use of  `_` for naming is preferred
+
+. . .
+
+Some names not allowed if they override existing objects (e.g. `if`, `NA`)
+
+. . .
+
+Others allowed, but not recommended (e.g. `TRUE`, `df`, `mean`)
+
+. . .
+
+Case sensitive: `Age` is different from `age`
+
+. . .
+
+Just be consistent
+
+![](https://cdn.myportfolio.com/45214904-6a61-4e23-98d6-b140f8654a40/dbb99049-2916-4bc8-824f-1816f5c4f06d_rw_3840.png?h=5c28a07483856cd07de35a50c772824d){.fragment .absolute right="0"}
 
 
 ## Exercise 1
